agriguard_5.O - Backend server setup fully functional prototype

--- a/index.html
+++ b/index.html
@@ -695,6 +695,17 @@
                             </div>
                         </div>
 
+                        <div class="biotech-ipm glass-card" id="biotech-container">
+                            <h3>🧬 Biotechnology-Enhanced IPM</h3>
+                            <p class="biotech-intro">Advanced biotechnological approaches for sustainable pest management</p>
+                            <div class="biotech-grid" id="biotech-grid">
+                                <!-- Biotech recommendations will be rendered here -->
+                            </div>
+                            <div class="biotech-advantages" id="biotech-advantages">
+                                <!-- Advantages will be rendered here -->
+                            </div>
+                        </div>
+
                         <div class="risk-assessment glass-card">
                             <h3>⚡ Predictive Risk Assessment</h3>
                             <div class="risk-timeline" id="risk-timeline">
