new webapp name

--- a/icons/README.html
+++ b/icons/README.html
@@ -17,8 +17,8 @@
     </style>
 </head>
 <body>
-    <h1>🌾 AgriGuard Icons</h1>
-    <p>SVG icons for the AgriGuard PWA. For production, convert these to PNG using a tool like:</p>
+    <h1>🌾 KrishiMitra Icons</h1>
+    <p>SVG icons for the KrishiMitra PWA. For production, convert these to PNG using a tool like:</p>
     <code>npx svgexport icons/icon-512.svg icons/icon-512.png 512:512</code>
     
     <h2>Available Icons</h2>
